# Tg2

./: Pasted-https-www-netflix-com-signup-creditoption-Content-Type-application-x-www-form-urlencoded-cache-con-1747323086340.txt  README.md  bot-requirements.txt  card_detector.py  config.py  main.py  netflix-bot.service  netflix_automation.py  netflix_bot.db  netflix_bot.py  netflix_bot_main.py  netflix_db.py  proxy_manager.py  pyproject.toml  session.txt  start_bot.py  telegram_client.py
